# Frappe_Marketplace

./: .gitignore  .lighthouserc.json  002_Field_Validasyon.md  102.md  113.md  114.md  117.md  118.md  119.md  121.md  127.md  133.md  135.md  136.md  137.md  138.md  139.md  140.md  144.md  145.md  149.md  151.md  152.md  156.md  CNAME  index.html  seceneklerim.md  tradehub-frontend-master-prompt.md  verify_e2e.py  verify_integration.py
frappe-bench/apps/tr_consent_center/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
frappe-bench/apps/tr_consent_center/tr_consent_center/: api.py  hooks.py  modules.txt  tasks.py
frappe-bench/apps/tr_consent_center/tr_consent_center/api/: __init__.py
frappe-bench/apps/tr_consent_center/tr_consent_center/config/: __init__.py  desktop.py
frappe-bench/apps/tr_contract_center/: MANIFEST.in  README.md  __init__.py  hooks.py  license.txt  modules.txt  pyproject.toml  setup.py
frappe-bench/apps/tr_contract_center/tr_contract_center/: api.py  events.py  hooks.py  rule_engine.py  tasks.py
frappe-bench/apps/tr_tradehub/: .auto-claude-security.json  CHANGELOG.md  JSON_FIELD_AUDIT.md  MANIFEST.in  MODULES.md  README.md  license.txt  pyproject.toml  requirements.txt  run_all_tests.sh  setup.py  setup_tradehub.sh
frappe-bench/apps/tr_tradehub/frontend/: MIGRATION_GUIDE.md  index.html  package.json  tradehub-frontend-build.md  vite.config.js
frappe-bench/apps/tr_tradehub/frontend/public/: sw.js  (+2 more)
frappe-bench/apps/tr_tradehub/tr_tradehub/: .auto-claude-security.json  hooks.py  modules.txt  patches.txt  sync_patch.py
(+1225 files in other folders)
