[project]
name = "tr_contract_center"
authors = [
    { name = "TR TradeHub", email = "info@tr-tradehub.com"}
]
description = "Contract Management System with Digital/Wet Signature Support"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
