[project]
name = "tr_tradehub"
authors = [
    { name = "TR-TradeHub", email = "info@tr-tradehub.com"}
]
description = "TR-TradeHub B2B/B4B/C2C Marketplace Platform - A comprehensive hybrid marketplace combining Alibaba-style B2B/B4B wholesale trade with eBay-style C2C individual sales"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "tr_tradehub"
